--- a/src/main/resources/ifpr/pgua/eic/projetovendas/fxml/listas.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetovendas/fxml/listas.fxml
@@ -5,11 +5,12 @@
 
 <FlowPane xmlns="http://javafx.com/javafx/17" 
           xmlns:fx="http://javafx.com/fxml/1" 
-          fx:controller="ifpr.pgua.eic.projetovendas.telas.Listas">
+          fx:controller="ifpr.pgua.eic.projetovendas.telas.Listas"
+          >
    <children>
       <VBox>
          <Label text="Pessoas"/>
-         <ListView fx:id="lstPessoas" />
+         <ListView fx:id="lstPessoas"/>
       </VBox>
 
       <VBox>
