--- a/src/main/resources/ifpr/pgua/eic/projetovendas/fxml/listas.fxml
+++ b/src/main/resources/ifpr/pgua/eic/projetovendas/fxml/listas.fxml
@@ -11,7 +11,7 @@
    <children>
       <VBox>
          <Label text="Pessoas"/>
-         <ListView fx:id="lstPessoas" onMouseClicked="#atualizarPessoa"/>
+         <ListView fx:id="lstPessoas" onMouseClicked="#atualizarRemoverPessoa"/>
       </VBox>
 
       <VBox>
